commented out unit test for serving http local

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
         <!-- build:js app/vendor-modules.min.js -->
         <script src="components/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
+        <script src="components/angular-bootstrap/release/angular-ui-router.js" type="text/javascript"></script>
         <!-- endbuild -->
 
         <!-- build:js app/core.min.js -->
