--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,27 @@
 <!doctype html>
 <html class="no-js modern lang-en" lang="en">
-    <head  ng-controller="headController">
+    <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Okra</title>
-
-        <script src="components/angular/angular.js" type="text/javascript"></script>
         <link rel="stylesheet" href="styles/css/main.css">
     </head>
-
-    <body ng-controller="bodyController">
-
-        <div>This is Okra.</div>
-
-        <div class="container" ng-hide="loader.full">
+    <body>
+        <div class="container">
             <div ng-cloak>
+                <header ng-controller="HeaderController as vm">
+                    <ul>
+                        <li ng-repeat="organization in [1, 2, 3, 4, 5]">
+                            Organization {{$index + 1}}
+                        </li>
+                        <li>
+                            <button ng-click="vm.addOrganization()">+Add an organization</button>
+                        </li>
+                    </ul>
+                    <a href><i>User Profile</i></a>
+                    <i>Notification</i>
+                </header>
                 <div ui-view></div>
 
                 <!-- Global  Footer -->
@@ -24,15 +30,15 @@
         </div>
 
         <!-- build:js app/vendor-modules.min.js -->
+        <script src="components/angular/angular.js" type="text/javascript"></script>
         <script src="components/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
         <script src="components/angular-bootstrap/ui-bootstrap.js" type="text/javascript"></script>
         <!-- endbuild -->
 
         <!-- build:js app/core.min.js -->
         <!-- <script src="app/init.js" type="text/javascript"></script> -->
-        <script src="app/app.js" type="text/javascript"></script>
-        <script src="app/app-route.js" type="text/javascript"></script>
-
+        <script src="app/templates.js" type="text/javascript"></script>
+        <script src="app/main.js" type="text/javascript"></script>
         <!-- endbuild -->
     </body>
 </html>
