--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Okra</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles/css/main.css">
     </head>
     <body>
@@ -32,7 +33,7 @@
         <!-- build:js app/vendor-modules.min.js -->
         <script src="components/angular/angular.js" type="text/javascript"></script>
         <script src="components/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
-        <script src="components/angular-bootstrap/ui-bootstrap.js" type="text/javascript"></script>
+        <script src="components/angular-bootstrap/ui-bootstrap-tpls.js" type="text/javascript"></script>
         <!-- endbuild -->
 
         <!-- build:js app/core.min.js -->
