--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href><i class="fa fa-user"></i> User Profile</a>
+                    <a href><i class="fa fa-user"></i></a>
                 </li>
                 <li>
                     <a href><i class="fa fa-bell"></i></a>
