added ui for adding a member

--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,15 @@
                 </li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href><i class="fa fa-user"></i></a>
+                <li class="dropdown" dropdown>
+                    <a href class="dropdown-toggle" dropdown-toggle>
+                        <i class="fa fa-user"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                          <a href>Add a member</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href><i class="fa fa-bell"></i></a>
