fixed header structure to fit spec

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,8 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                          <a href>Add a member</a>
+                            <a href>Settings</a>
+                            <a href>Logout</a>
                         </li>
                     </ul>
                 </li>
