--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,9 @@
             </div>
           </div>
         </nav>
-        <!-- Global  Footer -->
-        <div>Footer</div>
-        </div>
         <div class="container">
+            <section ui-view></section>
         </div>
-
         <!-- build:js app/vendor-modules.min.js -->
         <script src="components/angular/angular.js" type="text/javascript"></script>
         <script src="components/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
