--- a/src/index.html
+++ b/src/index.html
@@ -5,53 +5,39 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Okra</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="components/angular-material/angular-material.css">
-        <link rel="stylesheet" type="text/css" href="components/angular-material/themes/green-theme.css">
+        <link rel="stylesheet" type="text/css" href="styles/css/okra-theme.css">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="styles/css/main.css">
     </head>
     <body>
-        <!-- <nav class="navbar navbar-default" ng-controller="HeaderController as vm" role="navigation">
-          <div class="container-fluid">
-            <!-- Mobile Display -->
-            <!-- <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-              </button>
-              <a class="navbar-brand" href="#">LOGO</a>
+        <div layout="column" layout-fill>
+          <md-toolbar ng-controller="HeaderController as vm">
+            <div class="md-toolbar-tools">
+              <span>OKRA</span>
+                <md-list layout="row">
+                  <md-item ng-repeat="item in [1, 2, 3]">
+                    <md-item-content>
+                      <md-button href class="md-raised md-accent">Organization {{$index+1}}</md-button>
+                    </md-item-content>
+                  </md-item>
+                  <md-item>
+                    <md-button ng-click="vm.addOrganization()" class="md-raised md-primary"><i class="fa fa-plus"></i></md-button>
+                  </md-item>
+                </md-list>
+              <!-- fill up the space between left and right area -->
+              <span flex></span>
+              <md-button>
+                    <i class="fa fa-user"></i>                    
+              </md-button>
+              <md-button>
+                    <i class="fa fa-bell"></i>                    
+              </md-button>
             </div>
-
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
-                <li ng-repeat="organization in [1, 2, 3]">
-                    <a href>Organization {{$index + 1}}</a>
-                </li>
-                <li>
-                    <md-button ng-click="vm.addOrganization()" class="md-raised md-primary navbar-btn"><i class="fa fa-plus"></i></md-button>
-                </li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" dropdown>
-                    <a href class="dropdown-toggle" dropdown-toggle>
-                        <i class="fa fa-user"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href>Settings</a>
-                            <a href>Logout</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href><i class="fa fa-bell"></i></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav> -->
-        <div class="container">
+          </md-toolbar>
+          <md-content>
             <section ui-view></section>
+          </md-content>
         </div>
         <!-- build:js app/vendor-modules.min.js -->
         <script src="components/hammerjs/hammer.min.js" type="text/javascript"></script>
