--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
           </md-content>
         </div>
         <!-- build:js app/vendor-modules.min.js -->
+        <script src="libs/lodash.build.min.js" type="text/javascript"></script>
         <script src="components/hammerjs/hammer.min.js" type="text/javascript"></script>
         <script src="components/angular/angular.js" type="text/javascript"></script>
         // <script src="components/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
