--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div layout="column" layout-fill>
           <md-toolbar ng-controller="HeaderController as vm">
             <div class="md-toolbar-tools">
-              <span>OKRA</span>
+              <img style="width: 100px;" src="assets/okra-white-logo.png">
                 <md-list layout="row">
                   <md-item ng-repeat="item in [1, 2, 3]">
                     <md-item-content>
