--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Okra</title>
-        <link rel="stylesheet" type="text/css" href="components/angular-material/angular-material.css">
+        <link rel="stylesheet" type="text/css" href="components/angular-material/angular-material.min.css">
         <link rel="stylesheet" type="text/css" href="styles/css/okra-theme.css">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="styles/css/main.css">
+        <link rel="stylesheet" href="styles/css/main.min.css">
     </head>
     <body>
         <div layout="column" layout-fill>
@@ -42,10 +42,10 @@
         <!-- build:js app/vendor-modules.min.js -->
         <script src="libs/lodash.build.min.js" type="text/javascript"></script>
         <script src="components/hammerjs/hammer.min.js" type="text/javascript"></script>
-        <script src="components/angular/angular.js" type="text/javascript"></script>
-        // <script src="components/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
-        <script src="components/angular-material/angular-material.js" type="text/javascript"></script>
-        <script src="components/angular-animate/angular-animate.js" type="text/javascript"></script>
+        <script src="components/angular/angular.min.js" type="text/javascript"></script>
+        // <script src="components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
+        <script src="components/angular-material/angular-material.min.js" type="text/javascript"></script>
+        <script src="components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
         <script src="components/angular-aria/angular-aria.min.js" type="text/javascript"></script>
         <!-- endbuild -->
 
