added protractor testing for 404 error

--- a/src/index.html
+++ b/src/index.html
@@ -39,18 +39,15 @@
             <section ui-view></section>
           </md-content>
         </div>
-        <!-- build:js app/vendor-modules.min.js -->
         <script src="libs/lodash.build.min.js" type="text/javascript"></script>
         <script src="components/hammerjs/hammer.min.js" type="text/javascript"></script>
         <script src="components/angular/angular.min.js" type="text/javascript"></script>
-        // <script src="components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
+        <script src="components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
         <script src="components/angular-material/angular-material.min.js" type="text/javascript"></script>
         <script src="components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
         <script src="components/angular-aria/angular-aria.min.js" type="text/javascript"></script>
-        <!-- endbuild -->
 
         <script src="app/templates.js" type="text/javascript"></script>
         <script src="app/main.js" type="text/javascript"></script>
-        <!-- endbuild -->
     </body>
 </html>
