--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
             <section ui-view></section>
           </md-content>
         </div>
+        <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
         <script src="libs/lodash.build.min.js" type="text/javascript"></script>
         <script src="components/hammerjs/hammer.min.js" type="text/javascript"></script>
         <script src="components/angular/angular.min.js" type="text/javascript"></script>
