--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
             <section ui-view></section>
           </md-content>
         </div>
+        <script src="libs/jsplumb/dist/js/dom.jsPlumb-1.7.2-min.js" type="text/javascript"></script>
         <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
         <script src="libs/lodash.build.min.js" type="text/javascript"></script>
         <script src="components/hammerjs/hammer.min.js" type="text/javascript"></script>
@@ -54,7 +55,6 @@
         <script src="components/angular-material/angular-material.min.js" type="text/javascript"></script>
         <script src="components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
         <script src="components/angular-aria/angular-aria.min.js" type="text/javascript"></script>
-
         <script src="app/templates.js" type="text/javascript"></script>
         <script src="app/main.js" type="text/javascript"></script>
     </body>
