made the layout fixed instead of responsive

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
             </div>
           </md-toolbar>
           <md-content>
-            <section ui-view></section>
+            <section ui-view class="content-wrapper"></section>
           </md-content>
         </div>
         <script src="libs/jsplumb/dist/js/dom.jsPlumb-1.7.2-min.js" type="text/javascript"></script>
