--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,11 @@
           <md-toolbar ng-controller="HeaderController as vm">
             <div class="md-toolbar-tools">
               <img style="width: 100px;" src="assets/okra-white-logo.png">
-              <div class="organization-widget">
-                <img class="logo" src="http://img4.wikia.nocookie.net/__cb20140723203502/thehungergames/images/b/b9/House_stark_by_azraeuz-d61daf1.png">
-                <div class="org-name">Winterfell Clan</div>
-                <div>
-                  <md-button class="md-raised" aria-label="members">
-                    Members                    
-                  </md-button>
-                </div>
-              </div>
+              <div organization-summary-widget></div>
 
               <!-- fill up the space between left and right area -->
               <h1 class="username" flex>
-                Jon Snow
+                {{vm.userName}}
               </h1>
               <md-button aria-label="settings">
                     <i class="fa fa-cog"></i>                    
