--- a/src/index.html
+++ b/src/index.html
@@ -36,15 +36,19 @@
             <section ui-view class="content-wrapper"></section>
           </md-content>
         </div>
+        <!-- load third party librarys -->
+        <script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>
         <script src="external/dom.jsPlumb-1.7.2-min.js" type="text/javascript"></script>
         <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
         <script src="libs/lodash.build.min.js" type="text/javascript"></script>
         <script src="components/hammerjs/hammer.min.js" type="text/javascript"></script>
+        <!-- angular external dependencies -->
         <script src="components/angular/angular.min.js" type="text/javascript"></script>
         <script src="components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
         <script src="components/angular-material/angular-material.min.js" type="text/javascript"></script>
         <script src="components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
         <script src="components/angular-aria/angular-aria.min.js" type="text/javascript"></script>
+        <!-- load the app -->
         <script src="app/templates.js" type="text/javascript"></script>
         <script src="app/main.js" type="text/javascript"></script>
     </body>
