--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,9 @@
         <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
         <script src="libs/lodash.build.min.js" type="text/javascript"></script>
         <script src="components/hammerjs/hammer.min.js" type="text/javascript"></script>
-        <!-- angular external dependencies -->
         <script src="components/angular/angular.min.js" type="text/javascript"></script>
+        <!-- angular external dependencies -->
+        <script src="components/angular-cookie/angular-cookie.min.js" type="text/javascript"></script>
         <script src="components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
         <script src="components/angular-material/angular-material.min.js" type="text/javascript"></script>
         <script src="components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
