--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
               <img style="width: 100px;" src="assets/okra-white-logo.png">              
               <!-- fill up the space between left and right area -->
               <h1 class="username" flex>
-                {{vm.session.user}}
+                {{vm.session.user.displayName}}
               </h1>
               <md-button aria-label="settings">
                     <i class="fa fa-cog"></i>                    
