--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,6 @@
           </md-content>
         </div>
         <!-- load third party librarys -->
-        <script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>
         <script src="external/dom.jsPlumb-1.7.2-min.js" type="text/javascript"></script>
         <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
         <script src="libs/lodash.build.min.js" type="text/javascript"></script>
@@ -52,5 +51,15 @@
         <!-- load the app -->
         <script src="app/templates.js" type="text/javascript"></script>
         <script src="app/main.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            window.checkAuth = function () {
+              if(window.isAuthenticated) {
+                window.isAuthenticated();
+              } else {
+                window.checkAuth();
+              }
+            };
+        </script>
+        <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
     </body>
 </html>
