added toast message for non silent auth

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,16 @@
                 {{vm.session.user.displayName}}
               </h1>
               <md-button aria-label="settings">
-                    <i class="fa fa-cog"></i>                    
+                    <i class="fa fa-cog"></i>
+                    <md-list>
+                      <md-item>
+                        <md-item-content>
+                          <div class="md-tile-content">
+                            <h4>Logout</h4>
+                          </div>
+                        </md-item-content>
+                      </md-item>
+                    </md-list>                   
               </md-button>
               <md-button aria-label="user profile">
                     <i class="fa fa-user"></i>                    
