--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                   </md-item-content>
                 </md-item>
                 <md-item>
-                  <md-item-content>
+                  <md-item-content ng-click="vm.session.logOut()">
                     <div class="md-tile-content">
                       <h4>Logout</h4>
                     </div>
