--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
         <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
         <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="components/angular-material/angular-material.min.css">
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="styles/css/main.css">
-        <link href='http://fonts.googleapis.com/css?family=Raleway:700,400' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Raleway:700,400' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <div layout="column" layout-fill>
@@ -54,7 +54,7 @@
         </div>
         <!-- load third party librarys -->
         <script src="external/dom.jsPlumb-1.7.2-min.js" type="text/javascript"></script>
-        <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
+        <script src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
         <script src="libs/lodash.build.min.js" type="text/javascript"></script>
         <script src="components/hammerjs/hammer.min.js" type="text/javascript"></script>
         <script src="components/angular/angular.min.js" type="text/javascript"></script>
